<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed_nav2</name>
  <version>0.1.0</version>
  <description>Plugin to integrate ZED Terrain Mapping in as a Nav2 costmap_2d layer</description>
  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://www.stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros2-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros2-wrapper/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>nav2_costmap_2d</depend>
	<depend>grid_map_msgs</depend>
	<depend>grid_map_ros</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_cmake_copyright</test_depend>
	<test_depend>ament_cmake_cppcheck</test_depend>
	<test_depend>ament_cmake_lint_cmake</test_depend>
	<test_depend>ament_cmake_pep257</test_depend>
	<test_depend>ament_cmake_uncrustify</test_depend>
	<test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <costmap_2d plugin="${prefix}/plugins_description.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
