<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>zed_display_rviz2</name>
    <version>4.2.1</version>
    <description>"zed_display_rviz2" is a ROS2 package to visualize in RVIZ2 the information from
        the "zed_wrapper" node
    </description>
    <maintainer email="mbednarek@flyps.io">Michał Bednarek</maintainer>
    <license>Apache License 2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>ament_cmake_auto</build_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>zed_interfaces</exec_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_clang_format</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
