<?xml version="1.0"?>
<!-- Package format 3 according to http://www.ros.org/reps/rep-0149.html -->
<package format="3">
	<name>zed_costmap2d_example</name>
	<version>0.1.0</version>
	<description> This package is an example about how to configure the Nav2 package to generate a 2D cost map by using the Spatio Temporal Voxel Layer (STVL) plugin for navigation. </description>
	<maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
	<license>MIT</license>
	<url type="website">https://www.stereolabs.com/</url>
	<url type="repository">https://github.com/stereolabs/zed-ros2-wrapper</url>
	<url type="bugtracker">https://github.com/stereolabs/zed-ros2-wrapper/issues</url>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>zed_wrapper</depend>
	<depend>nav2_bringup</depend>
  <depend>spatio_temporal_voxel_layer</depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>