<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>zed_depth_to_laserscan</name>
    <version>5.2.2</version>
    <description>Contains a ROS 2 examples launch file to subscribe to a ZED Depth map and generate a virtual laser scan</description>
    <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
    <license>Apache License 2.0</license>
    <url type="website">https://www.stereolabs.com/</url>
    <url type="repository">https://github.com/stereolabs/zed-ros2-wrapper</url>
    <url type="bugtracker">https://github.com/stereolabs/zed-ros2-wrapper/issues</url>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>ament_cmake_auto</build_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>rcutils</depend>
    <depend>builtin_interfaces</depend>
    <depend>sensor_msgs</depend>
    <depend>image_transport</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>zed_components</depend>
    <depend>zed_msgs</depend>
    <depend>depthimage_to_laserscan</depend>

    <exec_depend>launch_ros</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_clang_format</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
