<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>zed_isaac_ros_april_tag</name>
<version>5.2.0</version>
    <description>Contains an example to integrate ZED camera with Isaac ROS for AprilTag detection leveraging NITROS communication.</description>
    <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
    <license>Apache License 2.0</license>
    <url type="website">https://www.stereolabs.com/</url>
    <url type="repository">https://github.com/stereolabs/zed-ros2-wrapper</url>
    <url type="bugtracker">https://github.com/stereolabs/zed-ros2-wrapper/issues</url>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>ament_cmake_auto</build_depend>
    <build_depend>rcutils</build_depend>
    <build_depend>builtin_interfaces</build_depend>

    <exec_depend>zed_components</exec_depend>
    <exec_depend>zed_wrapper</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>rcutils</exec_depend>
    <exec_depend>builtin_interfaces</exec_depend>
 
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_clang_format</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
