<?xml version="1.0"?>
<!-- Package format 3 according to http://www.ros.org/reps/rep-0149.html -->
<package format="3">
	<name>topic_benchmark</name>
	<version>0.1.0</version>
	<description>    This package contains tools to test the performance of the ZED ROS2 Wrapper  </description>
	<maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
	<license>MIT</license>
	<url type="website">https://www.stereolabs.com/</url>
	<url type="repository">https://github.com/stereolabs/zed-ros2-wrapper</url>
	<url type="bugtracker">https://github.com/stereolabs/zed-ros2-wrapper/issues</url>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>

	<build_depend>builtin_interfaces</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>rosidl_default_generators</build_depend>

	<exec_depend>std_msgs</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>