<?xml version="1.0"?>
<!-- Package format 3 according to http://www.ros.org/reps/rep-0149.html -->
<package format="3">
    <name>zed_topic_benchmark</name>
<version>5.1.0</version>
    <description> This package contains tools to test the performance of the ZED ROS2 Wrapper </description>
    <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
    <license>Apache License 2.0</license>
    <url type="website">https://www.stereolabs.com/</url>
    <url type="repository">https://github.com/stereolabs/zed-ros2-wrapper</url>
    <url type="bugtracker">https://github.com/stereolabs/zed-ros2-wrapper/issues</url>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>ament_cmake_auto</build_depend>
    <build_depend>zed_topic_benchmark_component</build_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>rclcpp_components</build_depend>
    <exec_depend>zed_topic_benchmark_component</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclcpp_components</exec_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_clang_format</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
